# MFC-SVG

./: .gitignore  CMakeLists.txt  README.md
ProjectSVG/: ProjectSVG.sln
ProjectSVG/ProjectSVG/: ProjectSVG.vcxproj
TestWindow/: CMakeLists.txt  TestWindow.cpp  TestWindow.h  TestWindow.rc  TestWindow.vcxproj  TestWindow.vcxproj.filters  TestWindowDlg.cpp  TestWindowDlg.h  resource.h
TestWindow/res/: TestWindow.rc2
svglib/: CMakeLists.txt  DebugLogger.cpp  DebugLogger.h  Devices.cpp  Devices.h  DxDebugName.h  IDeviceNotify.h  IHitTestListener.h  Renderer.cpp  Renderer.h  SvgCache.cpp  SvgCache.h  Window.cpp  Window.h  pch.h  svglib.filters  svglib.vcxproj  svglib.vcxproj.filters
